updating airavata client to support new registry api
git-svn-id: https://svn.apache.org/repos/asf/incubator/airavata/trunk@1382669 13f79535-47bb-0310-9956-ffa450edef68